--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
-body{
-	background-color:skyblue;
+:root{
+	background-color: rgb(135, 206, 235);
 }
 p:first-child{
 	background-color:black;
